Switching between basic calc. and scientific calc. added.

--- a/AndroidStudioProjects/ScientificCalculator/app/src/main/res/layout/scientificpad.xml
+++ b/AndroidStudioProjects/ScientificCalculator/app/src/main/res/layout/scientificpad.xml
@@ -191,13 +191,21 @@
             android:layout_weight="25"
             android:text="=" />
     </LinearLayout>
-
-    <ListView
-        android:id="@+id/listViewProcessLinesScient"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="100">
 
-    </ListView>
+        <Button
+            android:id="@+id/turnback"
+            android:onClick="backToBasic"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="25"
+            android:text="Back To Basic Calculator" />
+    </LinearLayout>
+
 
 </LinearLayout>
 
