--- a/AndroidStudioProjects/ScientificCalculator/app/src/main/res/layout/activity_main.xml
+++ b/AndroidStudioProjects/ScientificCalculator/app/src/main/res/layout/activity_main.xml
@@ -190,7 +190,20 @@
             android:layout_weight="25"
             android:text="=" />
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="100">
 
+        <Button
+            android:id="@+id/turnScientific"
+            android:onClick="ToScientific"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="25"
+            android:text="Go To Scientific Calculator" />
+    </LinearLayout>
     <ListView
         android:id="@+id/listViewProcessLines"
         android:layout_width="match_parent"
