--- a/AndroidStudioProjects/ScientificCalculator/app/src/main/res/layout/customtext.xml
+++ b/AndroidStudioProjects/ScientificCalculator/app/src/main/res/layout/customtext.xml
@@ -10,6 +10,6 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:textSize="40sp"
-        android:textColor="@android:color/holo_red_dark"
+        android:textColor="@android:color/holo_purple"
         android:textStyle="italic" />
 </LinearLayout>
